# n0-dns-resolver

./: Cargo.toml  Makefile.toml  README.md  build.rs  deny.toml
.cargo/: config.toml
.github/workflows/: beta.yaml  ci.yaml  flaky.yaml  tests.yaml
.zed/: settings.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dnssec_parse.rs  hosts.rs  parse_response.rs  resolv_conf.rs
src/: builder.rs  config.rs  dnssec.rs  error.rs  fuzz.rs  lib.rs  records.rs  resolver.rs  system_config.rs
src/resolver/: cache.rs  dnssec_validate.rs  pool.rs  query.rs  rtt_map.rs  transport.rs
src/system_config/: android.rs  apple.rs  hosts.rs  unix.rs  windows.rs
src/tests/: dnssec.rs  mod.rs  resolver.rs
tests/: integration.rs
